Fixed the brand name text on-hover color

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,10 @@ body {
 	color: #FFF;
 }
 
+.navbar-default .navbar-brand:hover {
+  color: #448aff;
+}
+
 .navbar-default .navbar-brand a:hover {
   color: #448aff;
 }
