--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ body {
 
 .navbar {
   background-color: #7B1FA2;
-  border-color: #e1bee7;
+  border-color: transparent;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -52,4 +52,8 @@ body {
 .btn-primary {
 	color: #fff;
 	background-color: #448aff;
+}
+
+h1, h2, h3, p, label {
+  color: #FFF;
 }
