Changed all the hex values in app.less to their respective variables (noted at the top of the file)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,52 +2,52 @@ body {
   background-color: #9C27B0;
 }
 .panel-body {
-  background-color: #FFF;
+  background-color: #FFFFFF;
 }
 .navbar {
   background-color: #7B1FA2;
   border-color: transparent;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #FFF;
+  color: #FFFFFF;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .panel-default > .panel-heading {
   color: #212121;
-  background-color: #e1bee7;
-  border-color: #e1bee7;
+  background-color: #E1BEE7;
+  border-color: #E1BEE7;
 }
 .navbar-default .navbar-brand {
-  color: #FFF;
+  color: #FFFFFF;
 }
 .navbar-default .navbar-brand:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .navbar-default .navbar-brand a:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .dropdown-menu {
-  background-color: #e1bee7;
-  border-color: #b6b6b6;
+  background-color: #E1BEE7;
+  border-color: #B6B6B6;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
   color: #555;
-  background-color: #e1bee7;
+  background-color: #E1BEE7;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #448aff;
+  color: #FFFFFF;
+  background-color: #448AFF;
 }
 h1,
 h2,
 h3,
 p,
 label {
-  color: #FFF;
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=app.css.map */
