--- a/public/stylesheets/customStyle.css
+++ b/public/stylesheets/customStyle.css
@@ -1,53 +1,62 @@
 body {
-  background-color: #9C27B0;
+  background-color: #fdf3e7;
 }
 .panel-body {
-  background-color: #FFF;
+  background-color: #FFFFFF;
 }
 .navbar {
-  background-color: #7B1FA2;
+  background-color: #c63d0f;
   border-color: transparent;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #FFF;
+  color: #FFFFFF;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .panel-default > .panel-heading {
   color: #212121;
-  background-color: #e1bee7;
-  border-color: #e1bee7;
+  background-color: #ec5a0f;
+  border-color: #ec5a0f;
 }
 .navbar-default .navbar-brand {
-  color: #FFF;
+  color: #FFFFFF;
 }
 .navbar-default .navbar-brand:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .navbar-default .navbar-brand a:hover {
-  color: #448aff;
+  color: #448AFF;
 }
 .dropdown-menu {
-  background-color: #e1bee7;
-  border-color: #b6b6b6;
+  background-color: #ec5a0f;
+  border-color: #B6B6B6;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
   color: #555;
-  background-color: #e1bee7;
+  background-color: #ec5a0f;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #448aff;
+  color: #FFFFFF;
+  background-color: #448AFF;
+  border-color: transparent;
+}
+.btn-primary:hover {
+  color: #FFFFFF;
+  background-color: #448ADF;
+  border-color: transparent;
 }
 h1,
 h2,
 h3,
 p,
 label {
-  color: #FFF;
+  color: #212121;
+}
+#panelHeader {
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=customStyle.css.map */
