Added content to Create Account page. Now requires logic to actually create an account

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -2,7 +2,7 @@
 @mainPrim:  #fdf3e7;
 @lightPrim: #ec5a0f;
 @textCol:   #FFFFFF;
-@accent:    #448AFF;
+@accent:    #558AFF;
 @textPrim:  #212121;
 @textSec:   #727272;
 @divider:   #B6B6B6;
@@ -23,12 +23,10 @@ body {
 
 .navbar-default .navbar-nav > li > a {
 	color: @textCol;
-
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-	color: @accent;
-
+	color: @textSec;
 }
 
 .panel-default > .panel-heading {
@@ -42,7 +40,7 @@ body {
 }
 
 .navbar-default .navbar-brand:hover {
-  color: @accent;
+  color: @textSec;
 }
 
 .navbar-default .navbar-brand a:hover {
