--- a/public/stylesheets/customStyle.css
+++ b/public/stylesheets/customStyle.css
@@ -1,3 +1,6 @@
+* {
+  border-radius: 0 !important;
+}
 body {
   background-color: #fdf3e7;
 }
@@ -12,7 +15,7 @@ body {
   color: #FFFFFF;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  color: #448AFF;
+  color: #727272;
 }
 .panel-default > .panel-heading {
   color: #212121;
@@ -23,10 +26,10 @@ body {
   color: #FFFFFF;
 }
 .navbar-default .navbar-brand:hover {
-  color: #448AFF;
+  color: #727272;
 }
 .navbar-default .navbar-brand a:hover {
-  color: #448AFF;
+  color: #558AFF;
 }
 .dropdown-menu {
   background-color: #ec5a0f;
@@ -40,7 +43,7 @@ body {
 }
 .btn-primary {
   color: #FFFFFF;
-  background-color: #448AFF;
+  background-color: #558AFF;
   border-color: transparent;
 }
 .btn-primary:hover {
