Added content to 'My Profile' page. Edited placeholder text in description textarea in 'Edit Profile' page.

--- a/public/stylesheets/customStyle.css
+++ b/public/stylesheets/customStyle.css
@@ -1,6 +1,12 @@
 * {
   border-radius: 0 !important;
 }
+a {
+  color: #FFFFFF;
+}
+a:hover {
+  color: #727272;
+}
 body {
   background-color: #fdf3e7;
 }
