--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -12,6 +12,14 @@
   border-radius: 0 !important;
 }
 
+a {
+  color: @textCol;
+}
+
+a:hover {
+  color: @textSec;
+}
+
 body {
   background-color: @mainPrim;
 }
