--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -27,6 +27,8 @@ body {
 
 .navbar-default .navbar-nav > li > a {
 	color: @textCol;
+        font-family: 'Rubik';
+        font-weight: 400;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
@@ -37,14 +39,18 @@ body {
 	color: @textPrim;
 	background-color: @lightPrim;
 	border-color: @lightPrim;
+        font-weight: 700;
 }
 
 .navbar-default .navbar-brand {
 	color: @textCol;
+        font-family: 'Rubik';
+        font-weight: 700;
 }
 
 .navbar-default .navbar-brand:hover {
   color: @textSec;
+  font-family: 'Rubik';
 }
 
 .navbar-default .navbar-brand a:hover {
