--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,96 +1,85 @@
-@darkPrim:  #c63d0f;
-@mainPrim:  #fdf3e7;
+@darkPrim: #c63d0f;
+@mainPrim: #fdf3e7;
 @lightPrim: #ec5a0f;
-@textCol:   #FFFFFF;
-@accent:    #558AFF;
-@textPrim:  #212121;
-@textSec:   #929292;
-@divider:   #B6B6B6;
+@textCol: #FFFFFF;
+@accent: #558AFF;
+@textPrim: #212121;
+@textSec: #929292;
+@divider: #B6B6B6;
 @accentHov: #448ADF;
-
 * {
-  border-radius: 0 !important;
+        border-radius: 0 !important;
 }
-
 a {
-  color: @textCol;
+        color: @textCol;
 }
-
 a:hover {
-  color: @textSec;
+        color: @textSec;
 }
-
 body {
-  background-color: @mainPrim;
+        background-color: @mainPrim;
 }
-
 .panel-body {
-  background-color: @textCol;
+        background-color: @textCol;
 }
-
 .navbar {
-  background-color: @darkPrim;
-  border-color: transparent;
+        background-color: @darkPrim;
+        border-color: transparent;
 }
-
 .navbar-default .navbar-nav > li > a {
-	color: @textCol;
-        font-family: 'Rubik';
+        color: @textCol;
+        font-family: 'Exo';
         font-weight: 400;
 }
-
 .navbar-default .navbar-nav > li > a:hover {
-	color: @textSec;
+        color: @textSec;
 }
-
 .panel-default > .panel-heading {
-	color: @textPrim;
-	background-color: @lightPrim;
-	border-color: @lightPrim;
+        color: @textPrim;
+        background-color: @lightPrim;
+        border-color: @lightPrim;
+        font-family: 'Exo';
         font-weight: 700;
 }
-
 .navbar-default .navbar-brand {
-	color: @textCol;
-        font-family: 'Rubik';
-        font-weight: 700;
+        color: @textCol;
+        font-family: 'Exo';
+        font-weight: 900;
 }
-
 .navbar-default .navbar-brand:hover {
-  color: @textSec;
-  font-family: 'Rubik';
+        color: @textSec;
+        font-family: 'Exo';
 }
-
 .navbar-default .navbar-brand a:hover {
-  color: @accent;
+        color: @accent;
 }
-
 .dropdown-menu {
-  background-color: @lightPrim;
-  border-color: @divider;
+        background-color: @lightPrim;
+        border-color: @divider;
 }
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
-	color: #555;
-	background-color: @lightPrim;
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+        color: #555;
+        background-color: @lightPrim;
 }
-
 .btn-primary {
-	color: @textCol;
-	background-color: @accent;
-  border-color: transparent;
+        color: @textCol;
+        background-color: @accent;
+        border-color: transparent;
 }
-
 .btn-primary:hover {
-	color: @textCol;
-	background-color: @accentHov;
-  border-color: transparent;
+        color: @textCol;
+        background-color: @accentHov;
+        border-color: transparent;
 }
-
-h1, h2, h3, p, label {
-  color: @textPrim;
+h1,
+h2,
+h3,
+p,
+label {
+        color: @textPrim;
 }
-
 #panelHeader {
-  color: @textCol;
+        color: @textCol;
 }
