--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -18,6 +18,12 @@ a:hover {
 }
 body {
         background-color: @mainPrim;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
+}
+
+.fa-btn {
+    margin-right: 6px;
 }
 .panel-body {
         background-color: @textCol;
@@ -39,6 +45,11 @@ body {
         background-color: @lightPrim;
         border-color: @lightPrim;
         font-family: 'Exo';
+        font-weight: 700;
+}
+
+.panel-body a {
+        color: #0a7cf4;
         font-weight: 700;
 }
 .navbar-default .navbar-brand {
