--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -22,6 +22,8 @@ body {
         font-weight: 400;
 }
 
+
+
 .fa-btn {
     margin-right: 6px;
 }
@@ -84,6 +86,15 @@ body {
         background-color: @accentHov;
         border-color: transparent;
 }
+
+.btn-warning a {
+  color: @textCol;
+}
+
+.btn-warning a:hover {
+  text-decoration: none;
+}
+
 h1,
 h2,
 h3,
