--- a/public/stylesheets/customStyle.css
+++ b/public/stylesheets/customStyle.css
@@ -73,10 +73,10 @@ body {
   background-color: #448ADF;
   border-color: transparent;
 }
-.btn-warning a {
+.btn a {
   color: #FFFFFF;
 }
-.btn-warning a:hover {
+.btn a:hover {
   text-decoration: none;
 }
 h1,
