--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -87,11 +87,11 @@ body {
         border-color: transparent;
 }
 
-.btn-warning a {
+.btn a {
   color: @textCol;
 }
 
-.btn-warning a:hover {
+.btn a:hover {
   text-decoration: none;
 }
 
